--- a/portfolio.html
+++ b/portfolio.html
@@ -20,111 +20,118 @@
 
   <body class="page">
     <!-- меню та контакти -->
-  <header>
-      <nav class="main-nav">
-        <a href="./index.html" class="logo"> Web<span class="studio">Studio</span> </a>
-        <ul class="site-nav list">
-          <li class="item"><a href="./index.html" class="link ">Студия</a></li>
-          <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li class="item"><a href="" class="link">Контакты</a></li>
-        </ul>
+    <header>
+      <div class="header-container">
+        <nav class="main-nav">
+          <a href="./index.html" class="logo"> Web<span class="studio">Studio</span> </a>
+          <ul class="site-nav list">
+            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
 
-        <ul class="auth-nav list">
-          <li class="item"><a href="Mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-          <li class="item"><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
-        </ul>
-      </nav>
+          <ul class="auth-nav list">
+            <li class="item">
+              <a href="Mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
-      <section class="conteiner">
-        <h1 class="none">примеры работ</h1>
-        <ul class="sample-nav list">
-          <li><button type="button" class="samp-button pointer">Все</button></li>
-          <li><button type="button" class="samp-button pointer">Веб-сайты</button></li>
-          <li><button type="button" class="samp-button pointer">Приложения</button></li>
-          <li><button type="button" class="samp-button pointer">Дизайн</button></li>
-          <li><button type="button" class="samp-button pointer">Маркетинг</button></li>
-        </ul>
+      <section class="section">
+        <div class="conteiner">
+          <h1 class="none">примеры работ</h1>
+          <ul class="sample-nav list">
+            <li><button type="button" class="samp-button pointer">Все</button></li>
+            <li><button type="button" class="samp-button pointer">Веб-сайты</button></li>
+            <li><button type="button" class="samp-button pointer">Приложения</button></li>
+            <li><button type="button" class="samp-button pointer">Дизайн</button></li>
+            <li><button type="button" class="samp-button pointer">Маркетинг</button></li>
+          </ul>
 
-        <ul class="sample list">
-          <li class="sample-item">
-            <img src="./images/port1.jpg" alt="Технокряк" width="370" />
-            <div class="content">
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
-            </div>
-          </li>
+          <ul class="sample list">
+            <li class="sample-item">
+              <img src="./images/port1.jpg" alt="Технокряк" width="370" />
+              <div class="content">
+                <h2>Технокряк</h2>
+                <p>Веб-сайт</p>
+              </div>
+            </li>
 
-          <li class="sample-item">
-            <img src="./images/port2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
-           <div class="content">
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
-            </div>
-          </li>
+            <li class="sample-item">
+              <img src="./images/port2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+              <div class="content">
+                <h2>Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+              </div>
+            </li>
 
-          <li class="sample-item">
-            <img src="./images/port3.jpg" alt="Ресторан Seafood" width="370" />
-           <div class="content">
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
-            </div>
-          </li>
+            <li class="sample-item">
+              <img src="./images/port3.jpg" alt="Ресторан Seafood" width="370" />
+              <div class="content">
+                <h2>Ресторан Seafood</h2>
+                <p>Приложение</p>
+              </div>
+            </li>
 
-          <li class="sample-item">
-            <img src="./images/port4.jpg" alt="Проект Prime" width="370" />
-            <div class="content">
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
-            </div>
-          </li>
+            <li class="sample-item">
+              <img src="./images/port4.jpg" alt="Проект Prime" width="370" />
+              <div class="content">
+                <h2>Проект Prime</h2>
+                <p>Маркетинг</p>
+              </div>
+            </li>
 
-          <li class="sample-item">
-            <img src="./images/port5.jpg" alt="Проект Boxes" width="370" />
-            <div class="content">
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
-            </div>
-          </li>
+            <li class="sample-item">
+              <img src="./images/port5.jpg" alt="Проект Boxes" width="370" />
+              <div class="content">
+                <h2>Проект Boxes</h2>
+                <p>Приложение</p>
+              </div>
+            </li>
 
-          <li class="sample-item">
-            <img src="./images/port6.jpg" alt="Inspiration has no Borders" width="370" />
-            <div class="content">
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-            </div>
-          </li>
+            <li class="sample-item">
+              <img src="./images/port6.jpg" alt="Inspiration has no Borders" width="370" />
+              <div class="content">
+                <h2>Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </div>
+            </li>
 
-          <li class="sample-item">
-            <img src="./images/port7.jpg" alt="Издание Limited Edition" width="370" />
-           <div class="content">
-             <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
-            </div>
-          </li>
+            <li class="sample-item">
+              <img src="./images/port7.jpg" alt="Издание Limited Edition" width="370" />
+              <div class="content">
+                <h2>Издание Limited Edition</h2>
+                <p>Дизайн</p>
+              </div>
+            </li>
 
-          <li class="sample-item">
-            <img src="./images/port8.jpg" alt="Проект LAB" width="370" />
-            <div class="content">
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
-            </div>
-          </li>
+            <li class="sample-item">
+              <img src="./images/port8.jpg" alt="Проект LAB" width="370" />
+              <div class="content">
+                <h2>Проект LAB</h2>
+                <p>Маркетинг</p>
+              </div>
+            </li>
 
-          <li class="sample-item">
-            <img src="./images/port9.jpg" alt="Growing Business" width="370" />
-            <div class="content">
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
-            </div>
-          </li>
-        </ul>
+            <li class="sample-item">
+              <img src="./images/port9.jpg" alt="Growing Business" width="370" />
+              <div class="content">
+                <h2>Growing Business</h2>
+                <p>Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- підвал -->
-  <footer>
-
+    <footer>
       <a href="./index.html" class="logo"> Web<span class="studio-white">Studio</span> </a>
       <address>
         <ul class="footer-nav">
@@ -141,7 +148,6 @@
           <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
         </ul>
       </address>
-    
     </footer>
   </body>
 </html>
