--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="page">
     <!-- меню та контакти -->
     <header>
-      <div class="header-container">
+   <div class="header-container">
         <nav class="main-nav">
           <a href="./index.html" class="logo"> Web<span class="studio">Studio</span> </a>
           <ul class="site-nav list">
@@ -41,11 +41,14 @@
       </div>
     </header>
 
+
     <main>
       <!-- герой -->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button-primary pointer">Заказать услугу</button>
+        <div class="conteiners">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="button-primary pointer">Заказать услугу</button>
+        </div>
       </section>
 
       <!-- переваги -->
@@ -79,7 +82,7 @@
         </div>
       </section>
       <!-- чим займаються -->
-      <section class="section">
+      <section class="section work-section">
         <div class="work-conteiner conteiner">
           <h2 class="section-title work">Чем мы занимаемся</h2>
           <ul class="list work-list">
@@ -132,8 +135,10 @@
         </div>
       </section>
     </main>
+    </div>
     <!-- підвал -->
-    <footer>
+    <footer >
+      <div class="conteiner ">
       <a href="./index.html" class="logo"> Web<span class="studio-white">Studio</span> </a>
       <address>
         <ul class="footer-nav">
@@ -150,6 +155,7 @@
           <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
         </ul>
       </address>
+</div>
     </footer>
   </body>
 </html>
