--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
 
           <ul class="sample list">
             <li class="sample-item">
-              <img src="./images/port1.jpg" alt="Технокряк" width="370" />
+              <img class="sample-img" src="./images/port1.jpg" alt="Технокряк" width="370" />
               <div class="content">
                 <h2>Технокряк</h2>
                 <p>Веб-сайт</p>
@@ -64,7 +64,12 @@
             </li>
 
             <li class="sample-item">
-              <img src="./images/port2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+              <img
+                class="sample-img"
+                src="./images/port2.jpg"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+              />
               <div class="content">
                 <h2>Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
@@ -72,7 +77,7 @@
             </li>
 
             <li class="sample-item">
-              <img src="./images/port3.jpg" alt="Ресторан Seafood" width="370" />
+              <img class="sample-img" src="./images/port3.jpg" alt="Ресторан Seafood" width="370" />
               <div class="content">
                 <h2>Ресторан Seafood</h2>
                 <p>Приложение</p>
@@ -80,7 +85,7 @@
             </li>
 
             <li class="sample-item">
-              <img src="./images/port4.jpg" alt="Проект Prime" width="370" />
+              <img class="sample-img" src="./images/port4.jpg" alt="Проект Prime" width="370" />
               <div class="content">
                 <h2>Проект Prime</h2>
                 <p>Маркетинг</p>
@@ -88,7 +93,7 @@
             </li>
 
             <li class="sample-item">
-              <img src="./images/port5.jpg" alt="Проект Boxes" width="370" />
+              <img class="sample-img" src="./images/port5.jpg" alt="Проект Boxes" width="370" />
               <div class="content">
                 <h2>Проект Boxes</h2>
                 <p>Приложение</p>
@@ -96,7 +101,12 @@
             </li>
 
             <li class="sample-item">
-              <img src="./images/port6.jpg" alt="Inspiration has no Borders" width="370" />
+              <img
+                class="sample-img"
+                src="./images/port6.jpg"
+                alt="Inspiration has no Borders"
+                width="370"
+              />
               <div class="content">
                 <h2>Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
@@ -104,7 +114,12 @@
             </li>
 
             <li class="sample-item">
-              <img src="./images/port7.jpg" alt="Издание Limited Edition" width="370" />
+              <img
+                class="sample-img"
+                src="./images/port7.jpg"
+                alt="Издание Limited Edition"
+                width="370"
+              />
               <div class="content">
                 <h2>Издание Limited Edition</h2>
                 <p>Дизайн</p>
@@ -112,7 +127,7 @@
             </li>
 
             <li class="sample-item">
-              <img src="./images/port8.jpg" alt="Проект LAB" width="370" />
+              <img class="sample-img" src="./images/port8.jpg" alt="Проект LAB" width="370" />
               <div class="content">
                 <h2>Проект LAB</h2>
                 <p>Маркетинг</p>
@@ -120,7 +135,7 @@
             </li>
 
             <li class="sample-item">
-              <img src="./images/port9.jpg" alt="Growing Business" width="370" />
+              <img class="sample-img" src="./images/port9.jpg" alt="Growing Business" width="370" />
               <div class="content">
                 <h2>Growing Business</h2>
                 <p>Приложение</p>
