add max-width :)

--- a/portfolio.html
+++ b/portfolio.html
@@ -147,22 +147,24 @@
     </main>
     <!-- підвал -->
     <footer>
-      <a href="./index.html" class="logo"> Web<span class="studio-white">Studio</span> </a>
-      <address>
-        <ul class="footer-nav">
-          <li>
-            <a
-              href="https://goo.gl/maps/hsA7HbgkKuzWEhCt6"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="add-maps"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li><a href="Mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="conteiner">
+        <a href="./index.html" class="logo"> Web<span class="studio-white">Studio</span> </a>
+        <address>
+          <ul class="footer-nav">
+            <li>
+              <a
+                href="https://goo.gl/maps/hsA7HbgkKuzWEhCt6"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="add-maps"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li><a href="Mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
